--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -42,13 +42,13 @@
 
     <p>Ekran ölçekleri ise gnl, ufk, ort, byk olarak isimlendirilir. Ekran ölçeği eğer gnl ise en küçük ekran genişliğinden en büyük ekran genişliğine doğru tüm ekranlara hitap eder. Eğer ekran ölçeğiniz ufk ise ufak ekran genişliğinden en büyük ekran genişliğine doğru kapsadığı tüm ekranlara hitap eder.</p>
 
-    <p>Kap örgüsünde oluşturulan bazı kavramlar vardır. Bu kavramları yazılışlarına göre üç farklı şekilde ele alırız. Her kavramın işlevi yerine göre bir işleyiş kazanır. Biliyor olmanız gereken kullanım kavramları:
-      <ul data-deveb>
-        <li>"<span data-metin="dikkat">SAYI SAYIp</span>"</li>
-        <li>"<span data-metin="dikkat">SAYI</span>"</li>
-        <li>"<span data-metin="dikkat">SAYIp</span>"</li>
-      </ul>
-    </p>
+    <p>Kap örgüsünde oluşturulan bazı kavramlar vardır. Bu kavramları yazılışlarına göre üç farklı şekilde ele alırız. Her kavramın işlevi yerine göre bir işleyiş kazanır. Biliyor olmanız gereken kullanım kavramları:</p>
+
+    <ul data-deveb>
+      <li>"<span data-metin="dikkat">SAYI SAYIp</span>"</li>
+      <li>"<span data-metin="dikkat">SAYI</span>"</li>
+      <li>"<span data-metin="dikkat">SAYIp</span>"</li>
+    </ul>
 
     <h2>Kap Örgüsü Kavramları</h2>
 
