roboto font ayarı

--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -8,7 +8,7 @@
   <title>Deveb Önyüz İskeleti</title>
 
   <!-- Kök -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
   <link href="https://data-deveb.github.io/assets/css/deveb.ilkel.s3.css" rel="stylesheet">
@@ -65,7 +65,7 @@
   </div>
   <div class="" data-gnl="4 4p">
     <div data-gnl="4">
-      <h1>Renk Tablosu Örneği</h1> 
+      <h1>Renk Tablosu Örneği</h1>
     </div>
     <div data-gnl="1" data-arka="ana">data-arka="ana"</div>
     <div data-gnl="1" data-arka="ara">data-arka="ara"</div>
