--- a/belgeler/kap-olcekleri/4p.html
+++ b/belgeler/kap-olcekleri/4p.html
@@ -8,7 +8,7 @@
   <title>Deveb Önyüz İskeleti</title>
 
   <!-- Kök -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
   <link href="https://data-deveb.github.io/assets/css/deveb.ilkel.s3.css" rel="stylesheet">
