kap hizalamayla birlikte diğer düzeltmeler

--- a/belgeler/belgeler.html
+++ b/belgeler/belgeler.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-<div class="ortala" data-gnl="24p" data-ort="24p">
+<div class="ortada" data-gnl="24p" data-ort="24p">
   <div class="kaplama" data-gnl="23" data-ort="16">
     <div data-gnl="4 4p">
       <div data-gnl="1">
