--- a/temel/header.html
+++ b/temel/header.html
@@ -1,9 +1,9 @@
-<div id="header" class="kap ortala merkez ap-beyaz beri-alt-1 kenar-alt" data-gnl="24p 24" style="min-height:60px;">
+<div id="header" class="kap ortada arada ap-beyaz beri-alt-1 kenar-alt" data-gnl="24p 24" style="min-height:60px;">
   <div class="kap ger" data-gnl="23">
-    <ul class="menü-genel kap merkez">
+    <ul class="menü-genel kap arada">
       <li><a href="https://data-deveb.github.io" class="logo">deveb</a></li>
     </ul>
-    <ul class="menü-genel kap merkez">
+    <ul class="menü-genel kap arada">
       <li><a href="https://data-deveb.github.io/belgeler/kap-orgusu.html">Kap Örgüsü</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/kap-orgusu/olcekler.html">Kap Ölçekleri</a></li>
       <!--<li><a href="belgeler/kap-orgusu/ornekler.html">Kap Örnekleri</a></li>-->
