--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -72,23 +72,23 @@
 
     <p>Bu kavramı kullanarak bir kap yazdığınızda tarayıcıya şunu dersiniz; "Benim varsayılan kap parçası düzenim ana html etiketinde belirttiğim SAYIp'dir. Aynı zamanda ana html etiketinde belirttiğim SAYI ana html etiketimin genişliğidir. Bu etiketin kapsadığı tüm yavru etiketler ben aksini belirtene kadar bu parça düzeninde olacaktır. Yavru etiketlerde SAYI yazarak genişliklerimi belirteceğim. Eğer yavru etiketlerden en az birinde SAYIp belirttiysem, bu belirttiğim etiketin parça düzeni olurken SAYI değeride ana HTML etiketiyle ilişkisini kesip bu etiketteki parça düzenine göre genişliği etkileyecektir. Ve bu HTML etiketin yavru etiketleri varsa onların varsayılan parça düzeni olacaktır."</p>
 
-    <h2>Kap Örgüsü Hizalama</h2>
+    <h2>Kap Örgüsü Konumlama</h2>
 
-    <p>Deveb kap örgüsünün hizalama özellikleri taşma, kayma, aynala, tersle, solda, ortada, sağda, ger,
+    <p>Deveb kap örgüsünün konumlama özellikleri taşma, kayma, aynala, tersle, solda, ortada, sağda, ger,
     yay, uza, başta, arada, sonda, çizgide sınıflarıyla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
 
-    <h3>Hizalama: <span data-metin="dikkat">taşma</span></h3>
-    <h3>Hizalama: <span data-metin="dikkat">kayma</span></h3>
-    <h3>Hizalama: <span data-metin="dikkat">solda</span></h3>
-    <h3>Hizalama: <span data-metin="dikkat">ortada</span></h3>
-    <h3>Hizalama: <span data-metin="dikkat">sağda</span></h3>
-    <h3>Hizalama: <span data-metin="dikkat">ger</span></h3>
-    <h3>Hizalama: <span data-metin="dikkat">yay</span></h3>
-    <h3>Hizalama: <span data-metin="dikkat">uza</span></h3>
-    <h3>Hizalama: <span data-metin="dikkat">başta</span></h3>
-    <h3>Hizalama: <span data-metin="dikkat">arada</span></h3>
-    <h3>Hizalama: <span data-metin="dikkat">sonda</span></h3>
-    <h3>Hizalama: <span data-metin="dikkat">çizgide</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">taşma</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">kayma</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">solda</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">ortada</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">sağda</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">başta</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">arada</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">sonda</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">ger</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">yay</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">uza</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">çizgide</span></h3>
 
     <h2>Konular</h2>
     <div data-gnl="24">
