--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -83,8 +83,8 @@
     <h3>Konumlama: <span data-metin="dikkat">ortada</span></h3>
     <h3>Konumlama: <span data-metin="dikkat">sağda</span></h3>
     <h3>Konumlama: <span data-metin="dikkat">başta</span></h3>
-    <h3>Konumlama: <span data-metin="dikkat">arada</span></h3>
-    <h3>Konumlama: <span data-metin="dikkat">sonda</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">göbekte</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">ayakta</span></h3>
     <h3>Konumlama: <span data-metin="dikkat">ger</span></h3>
     <h3>Konumlama: <span data-metin="dikkat">yay</span></h3>
     <h3>Konumlama: <span data-metin="dikkat">uza</span></h3>
