--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -89,6 +89,9 @@
     <h3>Konumlama: <span data-metin="dikkat">yay</span></h3>
     <h3>Konumlama: <span data-metin="dikkat">uza</span></h3>
     <h3>Konumlama: <span data-metin="dikkat">çizgide</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">ters-dizi</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">ters-satır</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">ters-sütun</span></h3>
 
     <h2>Konular</h2>
     <div data-gnl="24">
