Kap örgüsü tanımlamaları

--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -78,20 +78,64 @@
     yay, uza, başta, arada, sonda, çizgide sınıflarıyla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
 
     <h3>Konumlama: <span data-metin="dikkat">taşma</span></h3>
+
+    <p>"taşma" sınıfı bir HTML etiketindeki içeriğin dışarı taşmasını engeller.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">kayma</span></h3>
+
+    <p>"kayma" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">solda</span></h3>
+
+    <p>"solda" sınıfı bir HTML etiketindeki içeriği sola dayalı olarak gösterir.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">ortada</span></h3>
+
+    <p>"ortada" sınıfı bir HTML etiketindeki içeriği ortalanmış olarak gösterir.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">sağda</span></h3>
+
+    <p>"sağda" sınıfı bir HTML etiketindeki içeriği sağa dayalı olarak gösterir.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">başta</span></h3>
+
+    <p>"başta" sınıfı bir HTML etiketindeki içeriği başa doğru dayalı olarak gösterir.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">göbekte</span></h3>
+
+    <p>"göbekte" sınıfı bir HTML etiketindeki içeriği dikey konumda ortalanmış gösterir.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">ayakta</span></h3>
+
+    <p>"ayakta" sınıfı bir HTML etiketindeki içeriği en aşağıya dayalı olarak gösterir.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">ger</span></h3>
+
+    <p>"ger" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">yay</span></h3>
+
+    <p>"yay" sınıfı bir HTML etiketindeki içeriği sağa sola doğru yayarak gösterir.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">uza</span></h3>
+
+    <p>"uza" sınıfı bir HTML etiketindeki içeriği aşağıdan yukarıya uzatarak gösterir.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">çizgide</span></h3>
+
+    <p>"çizgide" sınıfı bir HTML etiketindeki içeriği bir çizgiye dizerek gösterir.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">ters-dizi</span></h3>
+
+    <p>"ters-dizi" sınıfı bir HTML etiketindeki içeriği ters yönde dizerek gösterir.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">ters-satır</span></h3>
+
+    <p>"ters-satır" sınıfı bir HTML etiketindeki satırları aynalı olarak gösterir.</p>
+
     <h3>Konumlama: <span data-metin="dikkat">ters-sütun</span></h3>
+
+    <p>"ters-sütun" sınıfı bir HTML etiketindeki sütunları aynalı olarak gösterir.</p>
 
     <h2>Konular</h2>
     <div data-gnl="24">
