--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -26,7 +26,7 @@
 <body>
 <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 <div class="ortada" data-gnl="24p">
-  <div class="kaplama" data-gnl="12">
+  <div class="kaplama" data-gnl="23" data-orta="16 24p">
 
     <h1>Kap Örgüsü <span data-metin="dikkat gri">(s0.9)</span></h1>
 
