--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -96,20 +96,20 @@
     <h3>Konumlama: <span data-metin="dikkat">başta</span></h3>
     <p>"başta" sınıfı bir HTML etiketindeki içeriği başa doğru dayalı olarak gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">başa</span></h3>
-    <p>"başa" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin üstüne dayalı olarak gösterir.</p>
+    <h3>Konumlama: <span data-metin="dikkat">başta-ol</span></h3>
+    <p>"başta-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin üstüne dayalı olarak gösterir.</p>
 
     <h3>Konumlama: <span data-metin="dikkat">göbekte</span></h3>
     <p>"göbekte" sınıfı bir HTML etiketindeki içeriği dikey konumda ortalanmış gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">göbeğe</span></h3>
-    <p>"göbeğe" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin dikey konumunda ortalanmış olarak gösterir.</p>
+    <h3>Konumlama: <span data-metin="dikkat">göbekte-ol</span></h3>
+    <p>"göbekte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin dikey konumunda ortalanmış olarak gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">yerde</span></h3>
-    <p>"yerde" sınıfı bir HTML etiketindeki içeriği en aşağıya dayalı olarak gösterir.</p>
+    <h3>Konumlama: <span data-metin="dikkat">sonda</span></h3>
+    <p>"sonda" sınıfı bir HTML etiketindeki içeriği en aşağıya dayalı olarak gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">yere</span></h3>
-    <p>"yere" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin aşağısına dayalı olarak gösterir.</p>
+    <h3>Konumlama: <span data-metin="dikkat">sonda-ol</span></h3>
+    <p>"sonda-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin aşağısına dayalı olarak gösterir.</p>
 
     <h3>Konumlama: <span data-metin="dikkat">ger</span></h3>
     <p>"ger" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
@@ -117,17 +117,17 @@
     <h3>Konumlama: <span data-metin="dikkat">yay</span></h3>
     <p>"yay" sınıfı bir HTML etiketindeki içeriği sağa sola doğru yayarak gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">uza</span></h3>
-    <p>"uza" sınıfı bir HTML etiketindeki içeriği aşağıdan yukarıya uzatarak gösterir.</p>
+    <h3>Konumlama: <span data-metin="dikkat">uzun</span></h3>
+    <p>"uzun" sınıfı bir HTML etiketindeki içeriği aşağıdan yukarıya uzatarak gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">uzan</span></h3>
-    <p>"uzan" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin durumuna göre uzatır.</p>
+    <h3>Konumlama: <span data-metin="dikkat">uzun-ol</span></h3>
+    <p>"uzun-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin durumuna göre uzatır.</p>
 
     <h3>Konumlama: <span data-metin="dikkat">çizgide</span></h3>
     <p>"çizgide" sınıfı bir HTML etiketindeki içeriği bir çizgiye dizerek gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">çizgiye</span></h3>
-    <p>"çizgiye" sınıfı bir buldunduğu etiketi bir çizgi konumuna dizerek gösterir.</p>
+    <h3>Konumlama: <span data-metin="dikkat">çizgide-ol</span></h3>
+    <p>"çizgide-ol" sınıfı bir buldunduğu etiketi bir çizgi konumuna dizerek gösterir.</p>
 
     <h3>Konumlama: <span data-metin="dikkat">ters-dizi</span></h3>
     <p>"ters-dizi" sınıfı bir HTML etiketindeki içeriği ters yönde dizerek gösterir.</p>
