--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -96,20 +96,11 @@
     <h3>Konumlama: <span data-metin="dikkat">başta</span></h3>
     <p>"başta" sınıfı bir HTML etiketindeki içeriği başa doğru dayalı olarak gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">başta-ol</span></h3>
-    <p>"başta-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin üstüne dayalı olarak gösterir.</p>
-
     <h3>Konumlama: <span data-metin="dikkat">göbekte</span></h3>
     <p>"göbekte" sınıfı bir HTML etiketindeki içeriği dikey konumda ortalanmış gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">göbekte-ol</span></h3>
-    <p>"göbekte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin dikey konumunda ortalanmış olarak gösterir.</p>
-
     <h3>Konumlama: <span data-metin="dikkat">sonda</span></h3>
     <p>"sonda" sınıfı bir HTML etiketindeki içeriği en aşağıya dayalı olarak gösterir.</p>
-
-    <h3>Konumlama: <span data-metin="dikkat">sonda-ol</span></h3>
-    <p>"sonda-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin aşağısına dayalı olarak gösterir.</p>
 
     <h3>Konumlama: <span data-metin="dikkat">ger</span></h3>
     <p>"ger" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
@@ -137,6 +128,14 @@
 
     <h3>Konumlama: <span data-metin="dikkat">ters-sütun</span></h3>
     <p>"ters-sütun" sınıfı bir HTML etiketindeki sütunları aynalı olarak gösterir.</p>
+
+    <h3>Konumlama: <span data-metin="dikkat">başta-ol göbekte-ol sonda-ol</span></h3>
+    <p>"başta-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin üstüne dayalı olarak gösterir.</p>
+    <p>"göbekte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin dikey konumunda ortalanmış olarak gösterir.</p>
+    <p>"sonda-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin aşağısına dayalı olarak gösterir.</p>
+
+    <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
 
     <h2>Konular</h2>
     <div data-gnl="24">
