--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -83,15 +83,14 @@
     <h3>Konumlama: <span data-metin="dikkat">kayma</span></h3>
     <p>"kayma" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">solda</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">solda ortada sağda</span></h3>
     <p>"solda" sınıfı bir HTML etiketindeki içeriği sola dayalı olarak gösterir.</p>
-
-    <h3>Konumlama: <span data-metin="dikkat">ortada</span></h3>
-
     <p>"ortada" sınıfı bir HTML etiketindeki içeriği ortalanmış olarak gösterir.</p>
-
-    <h3>Konumlama: <span data-metin="dikkat">sağda</span></h3>
     <p>"sağda" sınıfı bir HTML etiketindeki içeriği sağa dayalı olarak gösterir.</p>
+
+    <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+
 
     <h3>Konumlama: <span data-metin="dikkat">başta</span></h3>
     <p>"başta" sınıfı bir HTML etiketindeki içeriği başa doğru dayalı olarak gösterir.</p>
