--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -83,14 +83,14 @@
     <h3>Konumlama: <span data-metin="dikkat">kayma</span></h3>
     <p>"kayma" sınıfı bir HTML etiketindeki içeriğin alt satırlara kaymasını engeller ve tek satırda gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">solda ortada sağda</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">solda | ortada | sağda</span></h3>
     <p>"solda" sınıfı bir HTML etiketindeki içeriği sola dayalı olarak gösterir.</p>
     <p>"ortada" sınıfı bir HTML etiketindeki içeriği ortalanmış olarak gösterir.</p>
     <p>"sağda" sınıfı bir HTML etiketindeki içeriği sağa dayalı olarak gösterir.</p>
-
-    <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-    <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-
+    <div data-gnl="1 1p">
+      <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+      <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    </div>
 
     <h3>Konumlama: <span data-metin="dikkat">başta</span></h3>
     <p>"başta" sınıfı bir HTML etiketindeki içeriği başa doğru dayalı olarak gösterir.</p>
@@ -128,14 +128,14 @@
     <h3>Konumlama: <span data-metin="dikkat">ters-sütun</span></h3>
     <p>"ters-sütun" sınıfı bir HTML etiketindeki sütunları aynalı olarak gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">başta-ol göbekte-ol sonda-ol</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">başta-ol | göbekte-ol | sonda-ol</span></h3>
     <p>"başta-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin üstüne dayalı olarak gösterir.</p>
     <p>"göbekte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin dikey konumunda ortalanmış olarak gösterir.</p>
     <p>"sonda-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin aşağısına dayalı olarak gösterir.</p>
-
-    <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-    <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
-
+    <div data-gnl="1 1p">
+      <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+      <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    </div>
     <h2>Konular</h2>
     <div data-gnl="24">
       <div data-gnl="1o">    <div class="kutu kutu-genel metin-olumlu">      Ana Yapı    </div>  </div>
