kap örgüsü güncelleme

--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -92,14 +92,15 @@
       <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     </div>
 
-    <h3>Konumlama: <span data-metin="dikkat">başta</span></h3>
+    <h3>Konumlama: <span data-metin="dikkat">başta | göbekte | sonda</span></h3>
     <p>"başta" sınıfı bir HTML etiketindeki içeriği başa doğru dayalı olarak gösterir.</p>
-
-    <h3>Konumlama: <span data-metin="dikkat">göbekte</span></h3>
     <p>"göbekte" sınıfı bir HTML etiketindeki içeriği dikey konumda ortalanmış gösterir.</p>
-
-    <h3>Konumlama: <span data-metin="dikkat">sonda</span></h3>
     <p>"sonda" sınıfı bir HTML etiketindeki içeriği en aşağıya dayalı olarak gösterir.</p>
+    <div data-gnl="1 1p">
+      <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+      <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
+    </div>
+
 
     <h3>Konumlama: <span data-metin="dikkat">ger</span></h3>
     <p>"ger" sınıfı bir HTML etiketindeki içeriği en sağa ve sola yayarak gösterir.</p>
