kurulum dosyası oluşturuldu.

--- a/temel/header.html
+++ b/temel/header.html
@@ -4,6 +4,7 @@
       <li><a href="https://data-deveb.github.io" class="logo">deveb</a></li>
     </ul>
     <ul class="menü-genel kap göbekte">
+      <li><a href="https://data-deveb.github.io/belgeler/kurulum.html">Kurulum</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/kap-orgusu.html">Kap Örgüsü</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/kap-orgusu/olcekler.html">Kap Ölçekleri</a></li>
       <!--<li><a href="belgeler/kap-orgusu/ornekler.html">Kap Örnekleri</a></li>-->
