--- a/temel/foot.html
+++ b/temel/foot.html
@@ -1,4 +1,4 @@
-<div class="ortada arada beri-2" data-gnl="1">
+<div class="beri-2" data-deveb="ortada göbekte" data-gnl="1">
   <ul class="menü-genel">
     <li><a href="https://www.facebook.com/groups/1818283228485179/"> <i class="fa fa-facebook"></i> Facebook </a></li>
     <li><a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github"></i> Github </a></li>
