--- a/toprak/foot.html
+++ b/toprak/foot.html
@@ -1,11 +1,11 @@
-<div class="kap ortala merkez beri-2">
+<div class="kap merkez beri-2" data-deveb="ortada">
   <ul class="menü-genel">
     <li><a href="https://www.facebook.com/groups/1818283228485179/"> <i class="fa fa-facebook"></i> Facebook </a></li>
     <li><a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github"></i> Github </a></li>
   </ul>
 </div>
 
-<div class="ortala" data-gnl="24 24p">
+<div data-deveb="ortada" data-gnl="24 24p">
   <div id="disqus_thread" data-gnl="23"></div>
   <script>
 
