--- a/toprak/foot.html
+++ b/toprak/foot.html
@@ -1,4 +1,4 @@
-<div class="kap merkez beri-2" data-deveb="ortada">
+<div class="beri-2" data-deveb="kap ortada">
   <ul class="menü-genel">
     <li><a href="https://www.facebook.com/groups/1818283228485179/"> <i class="fa fa-facebook"></i> Facebook </a></li>
     <li><a href="https://github.com/djangoogreniyorum/deveb"><i class="fa fa-github"></i> Github </a></li>
