--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -25,8 +25,8 @@
 </head>
 <body>
 <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-<div class="ortada" data-gnl="24p">
-  <div class="kaplama" data-gnl="23" data-orta="16 24p">
+<div data-deveb="ortada" data-gnl="24p">
+  <div data-deveb="kaplama" data-gnl="23" data-orta="16 24p">
 
     <h1>Kap Örgüsü <span data-metin="dikkat gri">(s0.9)</span></h1>
 
@@ -181,7 +181,7 @@
 Her bir ismin kısaltılmış yazılışları vardır.</p>
 
 
-<table class="tablo gnl-5-5p">
+<table class="tablo" data-gnl="1 1p">
   <thead>
     <tr>
       <th>Ekran Çeşitleri</th>
