--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;subset=latin-ext" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Comfortaa:300,400,700&amp;subset=latin-ext" rel="stylesheet">
   <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
-  <link href="https://data-deveb.github.io/assets/css/deveb.ilkel.s3.css" rel="stylesheet">
+  <link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
   <link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.s1.css" rel="stylesheet">
   <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
 
