Konum isimlerinde düzeltme

--- a/belgeler/kap-orgusu.html
+++ b/belgeler/kap-orgusu.html
@@ -74,8 +74,7 @@
 
     <h2>Kap Örgüsü Konumlama</h2>
 
-    <p>Deveb kap örgüsünün konumlama özellikleri taşma, kayma, aynala, tersle, solda, ortada, sağda, ger,
-    yay, uza, başta, arada, sonda, çizgide sınıflarıyla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
+    <p>Deveb kap örgüsünün konumlama özellikleri oluşturulmuş birkaç sınıfla kullanılır. İsterseniz tek tek bu sınıfları inceleyelim</p>
 
     <h3>Konumlama: <span data-metin="dikkat">taşma</span></h3>
     <p>"taşma" sınıfı bir HTML etiketindeki içeriğin dışarı taşmasını engeller.</p>
@@ -92,10 +91,10 @@
       <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/r7gqcscx/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
     </div>
 
-    <h3>Konumlama: <span data-metin="dikkat">başta | göbekte | sonda</span></h3>
-    <p>"başta" sınıfı bir HTML etiketindeki içeriği başa doğru dayalı olarak gösterir.</p>
+    <h3>Konumlama: <span data-metin="dikkat">üstte | göbekte | altta</span></h3>
+    <p>"üstte" sınıfı bir HTML etiketindeki içeriği başa doğru dayalı olarak gösterir.</p>
     <p>"göbekte" sınıfı bir HTML etiketindeki içeriği dikey konumda ortalanmış gösterir.</p>
-    <p>"sonda" sınıfı bir HTML etiketindeki içeriği en aşağıya dayalı olarak gösterir.</p>
+    <p>"altta" sınıfı bir HTML etiketindeki içeriği en aşağıya dayalı olarak gösterir.</p>
     <div data-gnl="1 1p">
       <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/Lya0jeoa/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
       <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/Lya0jeoa/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
@@ -129,10 +128,10 @@
     <h3>Konumlama: <span data-metin="dikkat">ters-sütun</span></h3>
     <p>"ters-sütun" sınıfı bir HTML etiketindeki sütunları aynalı olarak gösterir.</p>
 
-    <h3>Konumlama: <span data-metin="dikkat">başta-ol | göbekte-ol | sonda-ol</span></h3>
-    <p>"başta-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin üstüne dayalı olarak gösterir.</p>
+    <h3>Konumlama: <span data-metin="dikkat">üstte-ol | göbekte-ol | altta-ol</span></h3>
+    <p>"üstte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin üstüne dayalı olarak gösterir.</p>
     <p>"göbekte-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin dikey konumunda ortalanmış olarak gösterir.</p>
-    <p>"sonda-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin aşağısına dayalı olarak gösterir.</p>
+    <p>"altta-ol" sınıfı bir tanımlandığı etiketi içinde bulunduğu etiketin aşağısına dayalı olarak gösterir.</p>
     <div data-gnl="1 1p">
       <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/html/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
       <iframe data-ort="1 2p" data-gnl="1 1p" height="300" src="//jsfiddle.net/deveb/z88dygpz/embedded/result/" allowfullscreen="allowfullscreen" frameborder="0"></iframe>
