kaplama sınıfı taşındı

--- a/belgeler/belgeler.html
+++ b/belgeler/belgeler.html
@@ -26,7 +26,7 @@
 <body>
 <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 <div class="ortada" data-gnl="24p" data-ort="24p">
-  <div class="kaplama" data-gnl="23" data-ort="16">
+  <div data-deveb="kaplama" data-gnl="23" data-ort="16">
     <div data-gnl="4 4p">
       <div data-gnl="1">
         <div class="kutu kutu-genel"><a href="#">Kap Örgüsü</a></div>
