--- a/belgeler/kap-orgusu/olcekler.html
+++ b/belgeler/kap-orgusu/olcekler.html
@@ -26,7 +26,7 @@
 <body>
   <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 <div class="ortala" data-gnl="24 24p">
-  <div class="kaplama" data-gnl="23">
+  <div data-deveb="kaplama" data-gnl="23">
     <div data-gnl="24">
       <h1>Kap Ölçekleri</h1>
     </div>
