--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -26,7 +26,7 @@
 <body class="kap ortala">
   <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
   <div data-gnl="23 24p">
-    <div class="kaplama" data-gnl="24" data-ufk="24 24p">
+    <div data-deveb="kaplama" data-gnl="24" data-ufk="24 24p">
       <div data-gnl="24">
         <h1>Deveb Kurulumu</h1>
         <p></p>
