--- a/belgeler/sekme-orgusu.html
+++ b/belgeler/sekme-orgusu.html
@@ -26,7 +26,7 @@
 <body>
   <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 <div class="ortala" data-gnl="24p" >
-  <div class="kaplama" data-gnl="23">
+  <div data-deveb="kaplama" data-gnl="23">
     <div class="beri-alt-2" data-gnl="2 2p">
       <div data-gnl="1">
         <div class="kutu kutu-genel">          SOL ÜST SEKME        </div>
