kaplama sınıfı düzeltildi.

--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -26,14 +26,14 @@
 <body>
   <div data-gnl="1 1p" class="header" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
-<div class="kaplama ortala" data-gnl="24p">
+<div data-deveb="kaplama" data-gnl="24p">
   <div data-gnl="23 24p">
     <div data-gnl="24">
       <h1>Tarayıcı Desteği</h1>
       <p class="beri-alt-2">Deveb önyüz iskeletini destekleyen tarayıcılar</p>
     </div>
 
-    <div class="sarkıtlat" data-gnl="24">
+    <div data-deveb="üstte" data-gnl="24">
       <div data-gnl="24">
         <h2>Masaüstü Desteği</h2>
         Destekler güncel sürümlere göre belirtilmiştir.
