--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -14,6 +14,7 @@
   <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet"><link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
   <link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.css" rel="stylesheet">
   <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
+  <script src="https://data-deveb.github.io/assets/js/not-for-deveb-rainbow-custom.min.js"></script>
 
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -29,6 +30,11 @@
     <div data-deveb="kaplama" data-gnl="24" data-ufk="24 24p">
       <div data-gnl="24">
         <h1>Deveb Kurulumu</h1>
+        <pre><code data-language="python">def openFile(path):
+    file = open(path, "r")
+    content = file.read()
+    file.close()
+    return content</code></pre>
         <p></p>
       </div>
     </div>
