Üstte sınıfı ekledik.

--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -33,12 +33,12 @@
       <p class="beri-alt-2">Deveb önyüz iskeletini destekleyen tarayıcılar</p>
     </div>
 
-    <div data-deveb="üstte" data-gnl="24">
+    <div data-gnl="24">
       <div data-gnl="24">
         <h2>Masaüstü Desteği</h2>
         Destekler güncel sürümlere göre belirtilmiştir.
       </div>
-      <div data-gnl="24">
+      <div data-gnl="24" data-deveb="üstte">
         <div data-gnl="6 6p" data-ufk="1 6p">
           <div data-gnl="3" data-ufk="6">
             <div class="kutu kutu-genel">
