--- a/belgeler/kurulum.html
+++ b/belgeler/kurulum.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="https://data-deveb.github.io/assets/css/font-awesome.min.css">
   <link href="https://data-deveb.github.io/assets/css/deveb.css" rel="stylesheet"><link href="https://data-deveb.github.io/assets/css/deveb.ilkel.css" rel="stylesheet">
   <link href="https://data-deveb.github.io/assets/css/ie/deveb.ilkel.ie.css" rel="stylesheet">
-  <link href="https://data-deveb.github.io/assets/css/deveb.genel.css" rel="stylesheet">
+  <link href="../assets/css/deveb.genel.css" rel="stylesheet">
 
   <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -28,8 +28,10 @@
     <div data-deveb="kaplama" data-gnl="24" data-ufk="24 24p">
       <div data-gnl="24">
         <h1>Deveb Kurulumu</h1>
-        
-        <p></p>
+        <p>Deveb kullanımı için yapmanız gereken sadece CSS dosyasını dahil etmenizdir.<br><br></p>
+          <pre style='color:#000000;background:#ffffff;'><span style='color:#a65700; '>&lt;</span><span style='color:#800000; font-weight:bold; '>link</span><span style='color:#274796; '> </span><span style='color:#074726; '>href</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"/css/deveb.css"</span><span style='color:#274796; '> </span><span style='color:#074726; '>rel</span><span style='color:#808030; '>=</span><span style='color:#0000e6; '>"stylesheet"</span><span style='color:#a65700; '>></span></pre>
+
+        <p><br><a href="https://data-deveb.github.io/assets/css/deveb.css">Deveb'i buradan indirebilirsiniz.</a></p>
       </div>
     </div>
   </div>
