--- a/temel/header.html
+++ b/temel/header.html
@@ -7,9 +7,9 @@
       <li><a href="https://data-deveb.github.io/belgeler/kurulum.html">Kurulum</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/kap-orgusu.html">Kap Örgüsü</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/kap-orgusu/olcekler.html">Kap Ölçekleri</a></li>
-      <!--<li><a href="belgeler/kap-orgusu/ornekler.html">Kap Örnekleri</a></li>-->
+      <!--<li><a href="belgeler/kap-orgusu/ornekler.html">Kap Örnekleri</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/sekme-orgusu.html">Sekme</a></li>
-      <li><a href="https://data-deveb.github.io/belgeler/resim-orgusu.html">Resim</a></li>
+      <li><a href="https://data-deveb.github.io/belgeler/resim-orgusu.html">Resim</a></li>-->
       <li><a href="https://data-deveb.github.io/belgeler/renk-orgusu.html">Renk</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/takim.html">Takım</a></li>
       <li><a href="https://data-deveb.github.io/belgeler/tarayici-destegi.html">Tarayıcı Desteği</a></li>
