--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </p>
           <p class="metin-gri-3 beri-2" data-deveb="yay" data-gnl="1 1p">
             <a href="/belgeler/kap-orgusu.html" style="border:1px solid #2c2171; border-radius:5px; padding:15px 50px;">BAŞLA</a>
-            <a href="https://www.facebook.com/groups/1818283228485179/" style="border:1px solid #2c2171; border-radius:5px; padding:15px 50px;">CANLI ÇALIŞMALARA KATIL</a>
+            <a href="https://www.facebook.com/groups/1818283228485179/" style="border:1px solid #2c2171; border-radius:5px; padding:15px 50px;">KATIL</a>
           </p>
         </div>
       </div>
