--- a/belgeler/tarayici-destegi.html
+++ b/belgeler/tarayici-destegi.html
@@ -26,7 +26,7 @@
 <body>
   <div data-gnl="1 1p" class="header" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
-<div data-deveb="kaplama" data-gnl="24p">
+<div data-deveb="kaplama ortada" data-gnl="24p">
   <div data-gnl="23 24p">
     <div data-gnl="24">
       <h1>Tarayıcı Desteği</h1>
