--- a/belgeler/renk-orgusu.html
+++ b/belgeler/renk-orgusu.html
@@ -23,10 +23,10 @@
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
 </head>
-<body class="kap ortala">
+<body>
   <div class="header" data-gnl="1 1p" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
-<div data-gnl="23 24p">
-<div data-deveb="kaplama" data-gnl="24" data-ufk="24 24p">
+<div data-deveb="kaplama ortada" data-gnl="24 24p">
+<div data-gnl="23" data-ufk="23 24p">
     <h1>Renk Örgüsü</h1>
     <p>Renk örgüsü varsayılan olarak tanımlanmış bazı renk etiketleriyle kullanılmaktadır. "ana", "ara", "birincil", "ikincil" etiketleri kullanıcılar tarafından özelleştirilebilir renk grubudur. Bunların yanında özelleştirilebilen "dikkat", "tehlike", "bilgi", "olumlu", "olumsuz" renk etiketleri de kullanıcılar tarafından özelleştirilebilmektedir. Aşağıda renk örgüsünü kullanmak yönünde açıklamaları okuyunuz.</p>
     <h2>Tanımlamalar</h2>
