--- a/belgeler/takim.html
+++ b/belgeler/takim.html
@@ -26,8 +26,8 @@
 <body>
   <div data-gnl="1 1p" class="header" w3-include-html="https://data-deveb.github.io/temel/header.html"></div>
 
-  <div class="ortala" gnl="24p">
-    <div data-deveb="kaplama" gnl="23">
+  <div data-deveb="kaplama ortada" gnl="24p">
+    <div gnl="23">
       <h1>Takımlar</h1>
       <p>Her takımın kendine ait bir görevi vardır. Bu takımlara istenildiği zaman katılabilir ve ayrılabilirsiniz. Takımlar bir işi çözmek için anlık olarak iş süreçleri oluştururlar. Sadık kalınan bir iş gidişatları yoktur.</p>
 
